--- a/notes-frontend/css/style.css
+++ b/notes-frontend/css/style.css
@@ -1,106 +1,144 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&display=swap");
 
 body {
-    padding: 0;
-    margin: 0;
-    background-color: #17141d;
-    color: white;
-    font-family: 'DM Mono', monospace;
+  padding: 0;
+  margin: 0;
+  gap: 10px;
+  background-color: #17141d;
+  color: white;
+  font-family: "DM Mono", monospace;
+  overflow-x: hidden;
 }
-
 
 header {
-    font-size: 2rem;
-  }
-  
+  font-size: 2rem;
+}
+.detailSection {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  justify-content: end;
+}
+
 .inputSection {
-    display: flex;
-    flex-direction: column;
-    gap:10px;
-    
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  justify-content: center;
+  align-items: center;
 }
 .todo-input {
-    width: 20vw;
-    height:7vh;
+  width: 20vw;
+  height: 7vh;
 }
-.todo-heading,.todo-button {
-    width : 20vw;
+.todo-heading,
+.todo-button {
+  width: 20vw;
 }
-.todo-button:hover{
-    background-color: #ff6f47;
-}
-  header,
-  form {
-    min-height: 20vh;
-    display: flex;
-    flex-direction: column;
-    gap:10px;
-    justify-content: center;
-    align-items: center;
-  }
-  form input,
-  form button {
-    padding: 0.5rem;
-    font-size: 2rem;
-    border: none;
-    background: white;
-  }
-  form button {
-    color: #ff6f47;
-    background: #f7fffe;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  form button:hover {
-    background: #ff6f47;
-    color: white;
-  }
 
-.container{
-    border: 2px solid rgba(255, 0, 0, 0.888);
-    width: 50%;
-    background-color: rgba(206, 53, 53, 0.716);
+.todo-button:hover {
+  background-color: #ff6f47;
 }
-.display_title{
-    font-size: 32px;
+header,
+form {
+  min-height: 20vh;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
-.cards{
-    min-height: 10rem;
-    background-color: rgba(111, 240, 240, 0.476);
-    border: 2px solid rgb(40, 224, 202);
-    border-radius: 4px;
+form input,
+form button {
+  padding: 0.5rem;
+  font-size: 2rem;
+  border: none;
+  background: white;
+}
+form button {
+  color: #ff6f47;
+  background: #f7fffe;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+form button:hover {
+  background: #ff6f47;
+  color: white;
+}
+
+.container {
+  border: 2px solid rgba(255, 0, 0, 0.888);
+  width: 50%;
+  background-color: rgba(206, 53, 53, 0.716);
+}
+.display_title {
+  font-size: 32px;
+}
+.cards {
+  min-height: 10rem;
+  background-color: rgba(111, 240, 240, 0.476);
+  border: 2px solid rgb(40, 224, 202);
+  border-radius: 4px;
 }
 
 .cardSection {
-    height: 350px;
-    width: 400px;
-    min-width: 250px;
-    padding: 1.5rem;
-    border-radius: 16px;
-    /* background: blanchedalmond; */
-    background: #17141d;
-    box-shadow: -1rem 0 3rem #000;
-    display: flex;
-    flex-direction: column;
-    transition: .2s;
-    margin: 0;
-    scroll-snap-align: start;
-    clear: both;
-    position: relative;
+  position: relative;
+  height: 350px;
+  width: 400px;
+  min-width: 250px;
+  padding: 1.5rem;
+  border-radius: 16px;
+  /* background: blanchedalmond; */
+  background: #17141d;
+  box-shadow: -1rem 0 3rem #000;
+  display: flex;
+  flex-direction: column;
+  transition: all 0.4s;
+  margin: 0;
+  scroll-snap-align: start;
+  clear: both;
+  position: relative;
 }
-.cardSection:focus-within~.card, .card:hover~.card {
+/* .cardSection:focus-within~.card, .card:hover~.card {
     transform: translateX(130px);
-}
+} */
 
 .cardSection:hover {
-    transform: translateY(-1rem);
-    transform: translateX(-3rem);
-   
-    z-index: 100;
+  transform: translateY(-1rem);
+  transform: translateX(-3rem);
+  background: linear-gradient(90deg, #ff8a00, #e52e71);
+
+  z-index: 100;
 }
 
 .cardSection:not(:first-child) {
-    margin-left: -130px;
+  margin-left: -130px;
+}
+
+@media screen and (max-width: 768px) {
+  .cardSection {
+    margin-left: 10px;
+  }
+  .cardSection:not(:first-child) {
+    margin-left: 10px;
+  }
+  .cardSection:hover {
+    background: inherit;
+  }
+  .todo-input {
+    width: 60vw;
+    height: 8vh;
+  }
+  .todo-heading,
+  .todo-button {
+    width: 60vw;
+  }
+
+  .todo-button:hover {
+    background-color: #ff6f47;
+  }
 }
